<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="fill_parent" android:id="@+id/textView1"
		android:layout_height="wrap_content" android:gravity="center"
		android:text="@string/main_title" android:layout_marginBottom="20dp"></TextView>
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginBottom="10dp">
		<ImageView android:src="@drawable/heartadd" android:id="@+id/imageView1"
			android:layout_width="50dp" android:layout_height="50dp"
			android:scaleType="fitXY"></ImageView>
		<Button android:layout_height="50dp" android:text="@string/enter_reading_menu_item"
			android:id="@+id/btnEnterNewReading" android:layout_width="fill_parent"></Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginBottom="10dp">
		<ImageView android:src="@drawable/regularheart" android:id="@+id/imageView2"
			android:layout_width="50dp" android:layout_height="50dp"
			android:scaleType="fitXY"></ImageView>
		<Button android:layout_height="50dp" android:text="@string/view_readings_menu_item"
			android:id="@+id/btnViewReadings" android:layout_width="fill_parent"></Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout3"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginBottom="10dp">
		<ImageView android:src="@drawable/helpred" android:id="@+id/imageView3"
			android:layout_width="50dp" android:layout_height="50dp"
			android:scaleType="fitXY"></ImageView>
		<Button android:layout_height="50dp" android:text="@string/help_about_menu_item"
			android:id="@+id/btnHelpAbout" android:layout_width="fill_parent"></Button>
	</LinearLayout>

</LinearLayout>
