<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_height="wrap_content" android:id="@+id/textView1"
		android:layout_width="fill_parent" android:gravity="center"
		android:text="@string/help_menu_title" android:layout_marginBottom="20dp"></TextView>
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_marginBottom="10dp">
		<ImageView android:src="@drawable/regularheart" android:id="@+id/imageView1"
			android:scaleType="fitXY" android:layout_width="50dp"
			android:layout_height="50dp"></ImageView>
		<Button android:layout_height="50dp" android:text="@string/help_how_to_use"
			android:id="@+id/btnHowTouse" android:layout_width="fill_parent"></Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_marginBottom="10dp">
		<ImageView android:src="@drawable/regularheart" android:id="@+id/imageView2"
			android:scaleType="fitXY" android:layout_width="50dp"
			android:layout_height="50dp"></ImageView>
		<Button android:layout_height="50dp" android:text="@string/help_what_readings_mean"
			android:id="@+id/btnBloodPressureInformation" android:layout_width="fill_parent"></Button>
	</LinearLayout>

</LinearLayout>
